<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colink_bg">

    <ImageView
        android:id="@+id/circle_big"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:src="@drawable/circle_bg"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_agree_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree_title"
        android:textColor="@color/colink_text"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/circle_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tv_terms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/agree_privacy"
        android:textColor="@color/colink_subtext"
        android:textSize="13sp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_agree_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <Spinner
        android:id="@+id/spinner_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_terms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_agree"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btn_agree"
        android:background="@drawable/pill_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="28dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
