<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colink_bg">

    <ImageView
        android:id="@+id/circle_illustration"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:src="@drawable/circle_bg"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:textColor="@color/colink_text"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/circle_illustration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tv_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_language_sub"
        android:textColor="@color/colink_subtext"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="6dp"/>

    <!-- Language list -->
    <ScrollView
        android:id="@+id/scroll_lang"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sub"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp"
        android:fillViewport="true">

        <RadioGroup
            android:id="@+id/radioGroupLanguages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- We'll populate concrete radio buttons in XML for clarity -->
            <RadioButton android:id="@+id/radio_english" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="English" android:textColor="@color/colink_text"/>
            <RadioButton android:id="@+id/radio_isizulu" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="isiZulu" android:textColor="@color/colink_text"/>
            <RadioButton android:id="@+id/radio_isixhosa" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="isiXhosa" android:textColor="@color/colink_text"/>
            <RadioButton android:id="@+id/radio_afrikaans" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Afrikaans" android:textColor="@color/colink_text"/>
            <RadioButton android:id="@+id/radio_sesotho" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Sesotho" android:textColor="@color/colink_text"/>
            <RadioButton android:id="@+id/radio_setswana" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Setswana" android:textColor="@color/colink_text"/>
            <RadioButton android:id="@+id/radio_xtsonga" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Xitsonga" android:textColor="@color/colink_text"/>
            <RadioButton android:id="@+id/radio_french" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="French" android:textColor="@color/colink_text"/>
            <RadioButton android:id="@+id/radio_portuguese" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Portuguese" android:textColor="@color/colink_text"/>
        </RadioGroup>
    </ScrollView>

    <!-- Next floating circular button -->
    <ImageButton
        android:id="@+id/btn_next"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/circle_btn"
        android:contentDescription="@string/btn_next_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>
